# rag-assessment

./: README.md  requirements.txt
rag_assessment/: .gitignore  Makefile  README.md  benchmark_results.json  pyproject.toml  retrieval_benchmark.md  run_benchmark.py
rag_assessment/app/: Home.py  engine_factory.py
rag_assessment/app/pages/: 1_Interactive_Query.py  2_Benchmark_Dashboard.py  3_Architecture.py
rag_assessment/data/: technical_context.json
rag_assessment/src/: config.py  embeddings.py  interfaces.py  orchestrator.py  query_expansion.py  vector_store.py
rag_assessment/tests/: conftest.py  test_embeddings.py  test_orchestrator.py  test_query_expansion.py  test_vector_store.py
